<resources>
    <string name="app_name">FitBus</string>

    <string name="select_home">Domicile</string>
    <string name="select_work">Travail</string>
    <string name="goal_title">Objectif</string>
    <string name="goal_one">Sexy sur la plage</string>
    <string name="goal_two">Garder la pêche</string>
    <string name="goal_three">Marathonien</string>
    <string name="select_goal">Sélectionnez votre objectif</string>
    <string name="validate">Valider</string>
    <string name="rainy">Aujourd\'hui il pleut, reposez-vous. Pensez à prendre votre parapluie.</string>
</resources>
