<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GoalActivity">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_goal"
        android:textSize="@dimen/title"
        android:textAlignment="center"/>

    <RadioGroup
        android:id="@+id/goals_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_tv"
        android:layout_marginTop="20dp">
        <RadioButton
            android:id="@+id/goal_one_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_one"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/goal_two_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_two"/>
        <RadioButton
            android:id="@+id/goal_three_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_three"/>
    </RadioGroup>

    <Button
        android:id="@+id/validate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goals_rg"
        android:layout_marginTop="20dp"
        android:text="@string/validate"/>

</RelativeLayout>
